Update CLI tool.

--- a/nbs/cli/display.ipynb
+++ b/nbs/cli/display.ipynb
@@ -228,21 +228,24 @@
     "    if not examples:\n",
     "        handle_module_not_found(\"examples\", module_name)\n",
     "        return\n",
+    "\n",
+    "    # Create formatter\n",
+    "    def example_formatter(\n",
+    "        item  # TODO: Add type hint and description\n",
+    "    ): # TODO: Add type hint\n",
+    "        \"TODO: Add function description\"\n",
+    "        return f\"  - {item.feature}: {item.docstring}\\n    View with: {get_view_command('example', item.module_name, item.feature)}\\n\"\n",
     "    \n",
-    "    print(f\"Usage Examples in '{module_name}' module:\")\n",
-    "    print(\"=\" * 60)\n",
-    "    \n",
-    "    for example_info in examples:\n",
-    "        print(f\"\\n{example_info.feature.replace('_', ' ').title()} Examples:\")\n",
-    "        print(f\"Function: {example_info.name}\")\n",
-    "        print(\"-\" * 60)\n",
-    "        print(example_info.source)\n",
-    "    \n",
-    "    print(f\"\\nTotal example functions: {len(examples)}\")\n",
+    "    display_items_generic(\n",
+    "        items=examples,\n",
+    "        title=f\"Usage Examples in '{module_name}' module:\",\n",
+    "        item_formatter=example_formatter,\n",
+    "        item_type=\"example functions\"\n",
+    "    )\n",
     "    \n",
     "    # Add helpful instructions\n",
     "    print(\"\\nTo explore further:\")\n",
-    "    print(f\"  View a specific example:\")\n",
+    "    print(f\"  View the source code for a specific example:\")\n",
     "    if examples:\n",
     "        first_example = examples[0]\n",
     "        print(f\"    {config.cli_command} example {module_name} {first_example.feature}\")\n",
@@ -263,8 +266,12 @@
    "source": [
     "#| export\n",
     "def display_all_examples(\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
     "): # TODO: Add type hint\n",
     "    \"\"\"Display all usage examples across all modules.\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "    \n",
     "    all_examples = list_all_examples()\n",
     "    \n",
     "    # Create formatter\n",
@@ -272,15 +279,27 @@
     "        item  # TODO: Add type hint and description\n",
     "    ): # TODO: Add type hint\n",
     "        \"TODO: Add function description\"\n",
-    "        feature_name = item.feature.replace('_', ' ')\n",
-    "        return f\"  - {feature_name}: {item.docstring}\"\n",
+    "        return f\"  - {item.feature}: {item.docstring}\"\n",
     "    \n",
     "    display_items_generic(\n",
     "        items=all_examples,\n",
     "        title=\"All Usage Examples by Module:\",\n",
     "        item_formatter=example_formatter,\n",
     "        item_type=\"example functions\"\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "    # Add helpful instructions\n",
+    "    print(\"\\nTo explore further:\")\n",
+    "    print(f\"  View examples for a specific module:\")\n",
+    "    if all_examples:\n",
+    "        first_key = list(all_examples.keys())[0]\n",
+    "        first_example = all_examples[first_key][0]\n",
+    "        print(f\"    {config.cli_command} examples -m {first_example.module_name}\")\n",
+    "    print(f\"  View the source code for a specific example:\")\n",
+    "    if all_examples:\n",
+    "        first_key = list(all_examples.keys())[0]\n",
+    "        first_example = all_examples[first_key][0]\n",
+    "        print(f\"    {config.cli_command} example {first_example.module_name} {first_example.feature}\")"
    ]
   },
   {
