--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -31,10 +31,11 @@
     "├── builders/ (2)\n",
     "│   ├── colors.ipynb  # Color system builders for Tailwind CSS utilities\n",
     "│   └── scales.ipynb  # Numeric and named scale builders for Tailwind CSS utilities\n",
-    "├── cli/ (12)\n",
+    "├── cli/ (13)\n",
     "│   ├── cli_config.ipynb            # Configuration system for multi-library CLI support\n",
     "│   ├── core_utils_discovery.ipynb  # Functions to discover and display core utility functions like combine_classes:\n",
     "│   ├── display.ipynb               # Functions to format and display the discovered information:\n",
+    "│   ├── dynamic_examples.ipynb      # Functions to generate dynamic examples for help text:\n",
     "│   ├── example_discovery.ipynb     # Functions to discover and extract test example functions:\n",
     "│   ├── explorer.ipynb              # CLI tool for API exploration of cjm-fasthtml-tailwind utilities\n",
     "│   ├── factory_extraction.ipynb    # Functions to extract BaseFactory instances from modules:\n",
@@ -66,7 +67,7 @@
     "    └── typography.ipynb                 # Typography utilities for Tailwind CSS\n",
     "```\n",
     "\n",
-    "Total: 32 notebooks across 4 directories"
+    "Total: 33 notebooks across 4 directories"
    ]
   },
   {
@@ -82,6 +83,7 @@
     "    cli_cli_config[cli.cli_config<br/>CLI Configuration]\n",
     "    cli_core_utils_discovery[cli.core_utils_discovery<br/>Core Utilities Discovery]\n",
     "    cli_display[cli.display<br/>Display Functions]\n",
+    "    cli_dynamic_examples[cli.dynamic_examples<br/>Dynamic Example Helpers]\n",
     "    cli_example_discovery[cli.example_discovery<br/>Example Discovery]\n",
     "    cli_explorer[cli.explorer<br/>explorer]\n",
     "    cli_factory_extraction[cli.factory_extraction<br/>Factory Extraction]\n",
@@ -113,113 +115,125 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_core_utils_discovery --> cli_cli_config\n",
-    "    cli_display --> cli_helper_discovery\n",
-    "    cli_display --> cli_search\n",
+    "    cli_display --> cli_pattern_scanner\n",
     "    cli_display --> cli_utils\n",
     "    cli_display --> cli_factory_extraction\n",
-    "    cli_display --> cli_cli_config\n",
-    "    cli_display --> cli_core_utils_discovery\n",
-    "    cli_display --> cli_pattern_scanner\n",
     "    cli_display --> cli_example_discovery\n",
-    "    cli_display --> cli_imports\n",
     "    cli_display --> cli_test_code\n",
+    "    cli_display --> cli_core_utils_discovery\n",
+    "    cli_display --> cli_cli_config\n",
+    "    cli_display --> cli_helper_discovery\n",
+    "    cli_display --> cli_search\n",
+    "    cli_display --> cli_imports\n",
+    "    cli_dynamic_examples --> cli_display\n",
+    "    cli_dynamic_examples --> cli_pattern_scanner\n",
+    "    cli_dynamic_examples --> cli_utils\n",
+    "    cli_dynamic_examples --> cli_factory_extraction\n",
+    "    cli_dynamic_examples --> cli_example_discovery\n",
+    "    cli_dynamic_examples --> cli_test_code\n",
+    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
+    "    cli_dynamic_examples --> cli_cli_config\n",
+    "    cli_dynamic_examples --> cli_helper_discovery\n",
+    "    cli_dynamic_examples --> cli_search\n",
+    "    cli_dynamic_examples --> cli_imports\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_helper_discovery\n",
-    "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_display\n",
+    "    cli_explorer --> cli_dynamic_examples\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_factory_extraction\n",
-    "    cli_explorer --> cli_cli_config\n",
-    "    cli_explorer --> cli_core_utils_discovery\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_imports\n",
     "    cli_explorer --> cli_test_code\n",
+    "    cli_explorer --> cli_core_utils_discovery\n",
+    "    cli_explorer --> cli_cli_config\n",
+    "    cli_explorer --> cli_helper_discovery\n",
+    "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_imports\n",
     "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
-    "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
+    "    cli_helper_discovery --> cli_utils\n",
     "    cli_imports --> cli_helper_discovery\n",
-    "    cli_imports --> cli_cli_config\n",
     "    cli_imports --> cli_factory_extraction\n",
-    "    cli_imports --> cli_utils\n",
     "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_imports --> cli_cli_config\n",
+    "    cli_imports --> cli_utils\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_search --> cli_example_discovery\n",
     "    cli_test_code --> cli_cli_config\n",
+    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_factory_extraction\n",
     "    cli_test_code --> cli_utils\n",
     "    cli_utils --> cli_cli_config\n",
-    "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_effects\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
+    "    core_testing --> utilities_accessibility\n",
+    "    core_testing --> utilities_effects\n",
+    "    core_testing --> utilities_layout\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_sizing\n",
     "    core_testing --> utilities_borders\n",
     "    core_testing --> utilities_typography\n",
+    "    core_testing --> core_base\n",
     "    core_testing --> utilities_backgrounds\n",
     "    core_testing --> utilities_transitions_and_animation\n",
-    "    core_testing --> utilities_accessibility\n",
     "    core_testing --> core_resources\n",
-    "    core_testing --> core_base\n",
     "    utilities_accessibility --> core_testing\n",
-    "    utilities_accessibility --> builders_scales\n",
     "    utilities_accessibility --> core_base\n",
-    "    utilities_backgrounds --> core_testing\n",
-    "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_accessibility --> builders_scales\n",
     "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_colors\n",
+    "    utilities_backgrounds --> core_testing\n",
+    "    utilities_backgrounds --> builders_scales\n",
     "    utilities_borders --> core_base\n",
-    "    utilities_borders --> core_testing\n",
     "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> builders_colors\n",
+    "    utilities_borders --> core_testing\n",
     "    utilities_effects --> core_base\n",
-    "    utilities_effects --> core_testing\n",
-    "    utilities_effects --> builders_scales\n",
     "    utilities_effects --> builders_colors\n",
-    "    utilities_filters --> builders_colors\n",
-    "    utilities_filters --> core_testing\n",
-    "    utilities_filters --> builders_scales\n",
+    "    utilities_effects --> builders_scales\n",
+    "    utilities_effects --> core_testing\n",
     "    utilities_filters --> core_base\n",
+    "    utilities_filters --> builders_colors\n",
+    "    utilities_filters --> builders_scales\n",
+    "    utilities_filters --> core_testing\n",
     "    utilities_flexbox_and_grid --> core_base\n",
-    "    utilities_flexbox_and_grid --> core_testing\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
-    "    utilities_interactivity --> core_testing\n",
-    "    utilities_interactivity --> builders_scales\n",
+    "    utilities_flexbox_and_grid --> core_testing\n",
     "    utilities_interactivity --> core_base\n",
+    "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> builders_colors\n",
+    "    utilities_interactivity --> core_testing\n",
     "    utilities_layout --> core_base\n",
-    "    utilities_layout --> core_testing\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_sizing --> builders_scales\n",
+    "    utilities_layout --> core_testing\n",
     "    utilities_sizing --> core_testing\n",
     "    utilities_sizing --> core_base\n",
-    "    utilities_spacing --> core_testing\n",
+    "    utilities_sizing --> builders_scales\n",
     "    utilities_spacing --> builders_scales\n",
+    "    utilities_spacing --> core_testing\n",
     "    utilities_spacing --> core_base\n",
-    "    utilities_svg --> core_testing\n",
     "    utilities_svg --> core_base\n",
     "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> builders_scales\n",
-    "    utilities_tables --> core_testing\n",
+    "    utilities_svg --> core_testing\n",
     "    utilities_tables --> builders_scales\n",
+    "    utilities_tables --> core_testing\n",
     "    utilities_tables --> core_base\n",
     "    utilities_transforms --> core_base\n",
-    "    utilities_transforms --> core_testing\n",
     "    utilities_transforms --> builders_scales\n",
-    "    utilities_transitions_and_animation --> core_testing\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
+    "    utilities_transforms --> core_testing\n",
     "    utilities_transitions_and_animation --> core_base\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
+    "    utilities_transitions_and_animation --> core_testing\n",
     "    utilities_typography --> builders_scales\n",
-    "    utilities_typography --> core_base\n",
-    "    utilities_typography --> core_testing\n",
     "    utilities_typography --> builders_colors\n",
+    "    utilities_typography --> core_testing\n",
+    "    utilities_typography --> core_base\n",
     "```\n",
     "\n",
-    "*107 cross-module dependencies detected*"
+    "*119 cross-module dependencies detected*"
    ]
   },
   {
@@ -1573,7 +1587,6 @@
     "    \"\"\"Get the active library configuration.\n",
     "    \n",
     "    If no configuration is set, returns the Tailwind config.\n",
-    "    Can be overridden by setting FASTHTML_LIB_CONFIG environment variable.\n",
     "    \"\"\"\n",
     "    global _active_config\n",
     "    \n",
@@ -1582,7 +1595,6 @@
     "    Get the active library configuration.\n",
     "    \n",
     "    If no configuration is set, returns the Tailwind config.\n",
-    "    Can be overridden by setting FASTHTML_LIB_CONFIG environment variable.\n",
     "    \"\"\"\n",
     "```\n",
     "\n",
@@ -1997,6 +2009,7 @@
     "\n",
     "```python\n",
     "def display_all_examples(\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
     "): # TODO: Add type hint\n",
     "    \"Display all usage examples across all modules.\"\n",
     "```\n",
@@ -2083,6 +2096,86 @@
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
     "): # TODO: Add type hint\n",
     "    \"Display the results of test code execution.\"\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dynamic Example Helpers (`dynamic_examples.ipynb`)\n",
+    "> Functions to generate dynamic examples for help text:\n",
+    "\n",
+    "#### Import\n",
+    "\n",
+    "```python\n",
+    "from cjm_fasthtml_tailwind.cli.dynamic_examples import (\n",
+    "    get_example_modules,\n",
+    "    get_example_factories,\n",
+    "    get_example_features,\n",
+    "    get_example_helpers,\n",
+    "    get_example_core_utils,\n",
+    "    get_combine_classes_example,\n",
+    "    get_example_test_code\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "#### Functions\n",
+    "\n",
+    "```python\n",
+    "def get_example_modules(\n",
+    "    limit: int = 2,  # TODO: Add description\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
+    ") -> str:  # TODO: Add return description\n",
+    "    \"Get example module names dynamically.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def get_example_factories(\n",
+    "    module_name: str = None,  # TODO: Add description\n",
+    "    limit: int = 4,  # TODO: Add description\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
+    ") -> str:  # TODO: Add return description\n",
+    "    \"Get example factory names dynamically.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def get_example_features(\n",
+    "    module_name: str = None,  # TODO: Add description\n",
+    "    limit: int = 3,  # TODO: Add description\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
+    ") -> str:  # TODO: Add return description\n",
+    "    \"Get example feature names dynamically.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def get_example_helpers(\n",
+    "    module_name: str = None,  # TODO: Add description\n",
+    "    limit: int = 2,  # TODO: Add description\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
+    ") -> str:  # TODO: Add return description\n",
+    "    \"Get example helper function names dynamically.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def get_example_core_utils(\n",
+    "    limit: int = 2,  # TODO: Add description\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
+    ") -> str:  # TODO: Add return description\n",
+    "    \"Get example core utility names dynamically.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def get_combine_classes_example(\n",
+    ") -> str:  # TODO: Add return description\n",
+    "    \"Get a dynamic example of combine_classes usage.\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "def get_example_test_code(\n",
+    "    limit_chars: int = 50  # TODO: Add description\n",
+    ") -> str:  # TODO: Add return description\n",
+    "    \"Get an actual code example from test functions.\"\n",
     "```\n"
    ]
   },
@@ -2664,13 +2757,6 @@
     "\n",
     "```python\n",
     "from cjm_fasthtml_tailwind.cli.explorer import (\n",
-    "    get_example_modules,\n",
-    "    get_example_factories,\n",
-    "    get_example_features,\n",
-    "    get_example_helpers,\n",
-    "    get_example_core_utils,\n",
-    "    get_combine_classes_example,\n",
-    "    get_example_test_code,\n",
     "    add_modules_parser,\n",
     "    add_factories_parser,\n",
     "    add_factory_parser,\n",
@@ -2694,62 +2780,6 @@
     "```\n",
     "\n",
     "#### Functions\n",
-    "\n",
-    "```python\n",
-    "def get_example_modules(\n",
-    "    limit: int = 2,  # TODO: Add description\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"Get example module names dynamically.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def get_example_factories(\n",
-    "    module_name: str = None,  # TODO: Add description\n",
-    "    limit: int = 4,  # TODO: Add description\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"Get example factory names dynamically.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def get_example_features(\n",
-    "    module_name: str = None,  # TODO: Add description\n",
-    "    limit: int = 3,  # TODO: Add description\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"Get example feature names dynamically.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def get_example_helpers(\n",
-    "    module_name: str = None,  # TODO: Add description\n",
-    "    limit: int = 2,  # TODO: Add description\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"Get example helper function names dynamically.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def get_example_core_utils(\n",
-    "    limit: int = 2,  # TODO: Add description\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"Get example core utility names dynamically.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def get_combine_classes_example(\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"Get a dynamic example of combine_classes usage.\"\n",
-    "```\n",
-    "\n",
-    "```python\n",
-    "def get_example_test_code(\n",
-    "    limit_chars: int = 50  # TODO: Add description\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"Get an actual code example from test functions.\"\n",
-    "```\n",
     "\n",
     "```python\n",
     "def add_modules_parser(\n",
