--- a/nbs/cli/explorer.ipynb
+++ b/nbs/cli/explorer.ipynb
@@ -69,6 +69,11 @@
     "    display_module_helpers, display_helper_source,\n",
     "    display_all_helpers, display_factory_info, display_search_results, \n",
     "    display_core_utility_source, display_core_utilities, display_imports, display_test_code_result\n",
+    ")\n",
+    "\n",
+    "from cjm_fasthtml_tailwind.cli.dynamic_examples import (\n",
+    "    get_example_modules, get_example_factories, get_example_features, get_example_helpers, \n",
+    "    get_example_core_utils, get_combine_classes_example, get_example_test_code\n",
     ")"
    ]
   },
@@ -76,304 +81,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1b585e61-5877-41fd-aa32-e9eae5dd0683",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "p48fmhklys",
-   "metadata": {},
-   "source": [
-    "## Dynamic Example Helpers\n",
-    "\n",
-    "Functions to generate dynamic examples for help text:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "y51vez1usfr",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def get_example_modules(\n",
-    "    limit: int = 2,  # TODO: Add description\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"\"\"Get example module names dynamically.\"\"\"\n",
-    "    if config is None:\n",
-    "        config = get_active_config()\n",
-    "        \n",
-    "    modules = list_utility_modules(config)\n",
-    "    if not modules:\n",
-    "        return \"\"\n",
-    "    \n",
-    "    module_names = list(modules.keys())[:limit]\n",
-    "    return \", \".join(module_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2evydknj95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def get_example_factories(\n",
-    "    module_name: str = None,  # TODO: Add description\n",
-    "    limit: int = 4,  # TODO: Add description\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"\"\"Get example factory names dynamically.\"\"\"\n",
-    "    if config is None:\n",
-    "        config = get_active_config()\n",
-    "        \n",
-    "    if module_name:\n",
-    "        factories = list_module_factories(module_name)\n",
-    "    else:\n",
-    "        # Get from first available module\n",
-    "        all_factories = list_all_factories()\n",
-    "        if not all_factories:\n",
-    "            return \"\"\n",
-    "        \n",
-    "        first_module = list(all_factories.keys())[0]\n",
-    "        factories = all_factories[first_module]\n",
-    "    \n",
-    "    if not factories:\n",
-    "        return \"\"\n",
-    "    \n",
-    "    factory_names = [f.name for f in factories[:limit]]\n",
-    "    return \", \".join(factory_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7tg0vr3008t",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def get_example_features(\n",
-    "    module_name: str = None,  # TODO: Add description\n",
-    "    limit: int = 3,  # TODO: Add description\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"\"\"Get example feature names dynamically.\"\"\"\n",
-    "    if config is None:\n",
-    "        config = get_active_config()\n",
-    "        \n",
-    "    if module_name:\n",
-    "        examples = list_module_examples(module_name)\n",
-    "    else:\n",
-    "        # Get from first module with examples\n",
-    "        all_examples = list_all_examples()\n",
-    "        if not all_examples:\n",
-    "            return \"\"\n",
-    "        \n",
-    "        first_module = list(all_examples.keys())[0]\n",
-    "        examples = all_examples[first_module]\n",
-    "    \n",
-    "    if not examples:\n",
-    "        return \"\"\n",
-    "    \n",
-    "    feature_names = [e.feature for e in examples[:limit]]\n",
-    "    return \", \".join(feature_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "nm13kkh5k7c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def get_example_helpers(\n",
-    "    module_name: str = None,  # TODO: Add description\n",
-    "    limit: int = 2,  # TODO: Add description\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"\"\"Get example helper function names dynamically.\"\"\"\n",
-    "    if config is None:\n",
-    "        config = get_active_config()\n",
-    "        \n",
-    "    if module_name:\n",
-    "        helpers = get_module_helpers(module_name)\n",
-    "    else:\n",
-    "        # Get from first module with helpers\n",
-    "        for mod_name, module in discover_utility_modules(config):\n",
-    "            helpers = get_module_helpers(mod_name)\n",
-    "            if helpers:\n",
-    "                break\n",
-    "        else:\n",
-    "            return \"\"\n",
-    "    \n",
-    "    if not helpers:\n",
-    "        return \"\"\n",
-    "    \n",
-    "    helper_names = [h.name for h in helpers[:limit]]\n",
-    "    return \", \".join(helper_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4psjlcsrnyl",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def get_example_core_utils(\n",
-    "    limit: int = 2,  # TODO: Add description\n",
-    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"\"\"Get example core utility names dynamically.\"\"\"\n",
-    "    if config is None:\n",
-    "        config = get_active_config()\n",
-    "        \n",
-    "    utilities = get_core_utilities(config)\n",
-    "    if not utilities:\n",
-    "        return \"\"\n",
-    "    \n",
-    "    util_names = [u.name for u in utilities[:limit]]\n",
-    "    return \", \".join(util_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "z60yqni1dx8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def get_combine_classes_example(\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"\"\"Get a dynamic example of combine_classes usage.\"\"\"\n",
-    "    # Try to find combine_classes usage in examples\n",
-    "    from cjm_fasthtml_tailwind.cli.example_discovery import list_all_examples\n",
-    "    from cjm_fasthtml_tailwind.cli.search import search_all\n",
-    "    \n",
-    "    # Search for combine_classes usage\n",
-    "    results = search_all('combine_classes', include_source=True, content_types=['examples'])\n",
-    "    \n",
-    "    if results:\n",
-    "        # Look for a simple combine_classes call\n",
-    "        import re\n",
-    "        for result in results:\n",
-    "            # Try to extract a combine_classes call from the match context\n",
-    "            match = re.search(r'combine_classes\\([^)]+\\)', result.match_context)\n",
-    "            if match:\n",
-    "                example = match.group(0)\n",
-    "                # Make sure it's not too long\n",
-    "                if len(example) <= 50:\n",
-    "                    return f\"print({example})\"\n",
-    "    \n",
-    "    # If no example found, create a minimal one with discovered factories\n",
-    "    factories = get_example_factories(limit=2).split(', ')\n",
-    "    if len(factories) >= 2:\n",
-    "        return f\"print(combine_classes({factories[0]}(4), {factories[1]}.auto))\"\n",
-    "    \n",
-    "    return \"print(combine_classes(...))\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "zp0bq390799",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def get_example_test_code(\n",
-    "    limit_chars: int = 50  # TODO: Add description\n",
-    ") -> str:  # TODO: Add return description\n",
-    "    \"\"\"Get an actual code example from test functions.\"\"\"\n",
-    "    # Try to get examples from the first available module\n",
-    "    all_examples = list_all_examples()\n",
-    "    if not all_examples:\n",
-    "        return \"<code-here>\"\n",
-    "    \n",
-    "    # Get the first module with examples\n",
-    "    first_module_name = list(all_examples.keys())[0]\n",
-    "    examples = all_examples[first_module_name]\n",
-    "    \n",
-    "    if not examples:\n",
-    "        return \"<code-here>\"\n",
-    "    \n",
-    "    # Look for a basic example first\n",
-    "    for example in examples:\n",
-    "        if 'basic' in example.feature:\n",
-    "            # Extract a simple assertion from the source\n",
-    "            lines = example.source.strip().split('\\n')\n",
-    "            for line in lines:\n",
-    "                line = line.strip()\n",
-    "                # Look for simple assert statements\n",
-    "                if line.startswith('assert') and 'str(' in line and '==' in line:\n",
-    "                    # Extract the expression being tested\n",
-    "                    parts = line.split('==')\n",
-    "                    if len(parts) == 2:\n",
-    "                        expr = parts[0].replace('assert', '').strip()\n",
-    "                        if len(expr) <= limit_chars:\n",
-    "                            return f\"print({expr})\"\n",
-    "    \n",
-    "    # If no basic example, try to find any simple assertion\n",
-    "    for example in examples:\n",
-    "        lines = example.source.strip().split('\\n')\n",
-    "        for line in lines:\n",
-    "            line = line.strip()\n",
-    "            if line.startswith('assert') and 'str(' in line and '==' in line:\n",
-    "                parts = line.split('==')\n",
-    "                if len(parts) == 2:\n",
-    "                    expr = parts[0].replace('assert', '').strip()\n",
-    "                    if len(expr) <= limit_chars:\n",
-    "                        return f\"print({expr})\"\n",
-    "    \n",
-    "    # Last resort: try to find any factory usage\n",
-    "    for example in examples:\n",
-    "        import re\n",
-    "        # Look for factory calls like p(4), m.auto, w.full\n",
-    "        matches = re.findall(r'\\b([a-z]+(?:\\.[a-z_]+)?(?:\\([^)]+\\))?)\\b', example.source)\n",
-    "        for match in matches:\n",
-    "            if '(' in match or '.' in match:\n",
-    "                if len(match) <= 20:  # Keep it short\n",
-    "                    return f\"print(str({match}))\"\n",
-    "    \n",
-    "    return \"<code-here>\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "505866ef-adf4-4e38-b253-4b514a1c86cf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "543b0e4e-ce25-45f7-97a3-ac6ec41c7d88",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "193c4f1f-81ba-4960-bd19-56670246ef33",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a91a50ea-4ceb-471c-8ed6-359e6021684a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -608,19 +315,19 @@
     "        '- Searches factory names, documentation, examples, helpers, and modules\\n'\n",
     "        '- Use --include-source to also search within code implementations\\n\\n'\n",
     "        'WHAT IT SEARCHES:\\n'\n",
-    "        '- Factory names and documentation (e.g., \"padding\" finds p, ps, pe factories)\\n'\n",
+    "        '- Factory names and documentation\\n'\n",
     "        '- Example function names, features, and docstrings\\n'\n",
     "        '- Helper function names and docstrings\\n'\n",
     "        '- Module names and documentation\\n'\n",
     "        '- Source code of examples/helpers (with --include-source flag)\\n\\n'\n",
     "        'SEARCH BEHAVIOR:\\n'\n",
-    "        '- Partial matching: \"color\" finds border_color, text_color, shadow_color, etc.\\n'\n",
-    "        '- No regex/wildcards: Patterns like \".*color.*\" or \"col*\" won\\'t work\\n'\n",
-    "        '- No CSS class values: Can\\'t search for \"bg-blue-500\" (values are dynamic)\\n\\n'\n",
+    "        '- Partial matching\\n'\n",
+    "        '- No regex/wildcards\\n'\n",
+    "        '- Not all possible CSS class values (values are dynamic, but may be able to find specific values with --include-source flag).\\n\\n'\n",
     "        'BEST FOR:\\n'\n",
-    "        '- Finding utility categories (padding, margin, flex, grid, shadow)\\n'\n",
-    "        '- Locating factory names (sr_only, combine_classes, p, m, bg)\\n'\n",
-    "        '- Discovering programming patterns (hover, transition, center)\\n\\n'\n",
+    "        '- Finding utility categories\\n'\n",
+    "        '- Locating factory names\\n'\n",
+    "        '- Discovering programming patterns\\n\\n'\n",
     "        'TIPS FOR CODING ASSISTANTS:\\n'\n",
     "        '- Use partial words to find related utilities\\n'\n",
     "        '- Add --include-source to find usage patterns in code\\n'\n",
@@ -629,7 +336,7 @@
     "    )\n",
     "    \n",
     "    if example_factories:\n",
-    "        description += f'\\n\\nExample searches: {example_factories}, padding, hover, transition, center'\n",
+    "        description += f'\\n\\nExample searches: {example_factories}'\n",
     "    \n",
     "    parser = subparsers.add_parser(\n",
     "        'search', \n",
@@ -696,7 +403,7 @@
     "        '- Validates your understanding before implementation\\n\\n'\n",
     "        'Code can be provided directly or loaded from a file.\\n\\n'\n",
     "        'Code format notes:\\n'\n",
-    "        '- Single-line statements work: \"print(p(4)); print(m(2))\"\\n'\n",
+    "        f'- Single-line statements work: \"{example_code}; {example_code}\"\\n'\n",
     "        '- Control flow requires multiline format (no semicolons):\\n'\n",
     "        '  Use: $\\'for i in [1,2]:\\\\n    print(p(i))\\'\\n'\n",
     "        '  NOT: \"for i in [1,2]: print(p(i))\"\\n'\n",
