Update CLI tool.

--- a/nbs/cli/explorer.ipynb
+++ b/nbs/cli/explorer.ipynb
@@ -397,7 +397,7 @@
     "        '- NEVER skip this step - it prevents errors and saves debugging time\\n'\n",
     "        '- This ensures correct syntax, proper imports, and expected output\\n\\n'\n",
     "        'This command:\\n'\n",
-    "        '- Automatically generates all necessary import statements\\n'\n",
+    "        f'- Automatically generates all necessary {config.package_name} import statements\\n'\n",
     "        '- Executes your code in a safe environment\\n'\n",
     "        '- Shows output or error messages\\n'\n",
     "        '- Validates your understanding before implementation\\n\\n'\n",
@@ -747,9 +747,10 @@
     "    elif args.code:\n",
     "        code = args.code\n",
     "    else:\n",
+    "        example_test_code = get_example_test_code()\n",
     "        print(\"Error: You must provide code to test either as an argument or via --file\")\n",
     "        print(\"\\nExamples:\")\n",
-    "        print(f'  {config.cli_command} test-code \"print(str(p(4)))\"')\n",
+    "        print(f'  {config.cli_command} test-code \"{example_test_code}\"')\n",
     "        print(f'  {config.cli_command} test-code --file test_snippet.py')\n",
     "        return\n",
     "    \n",
@@ -854,6 +855,25 @@
     "All information is dynamically extracted from the library itself - nothing is hardcoded.\n",
     "\"\"\".strip()\n",
     "    \n",
+    "    # Build example usage flow with aligned comments\n",
+    "    usage_flow_lines = [\n",
+    "        (f\"{config.cli_command} modules\", \"See what's available\"),\n",
+    "        (f\"{config.cli_command} factories -m {first_module}\", f\"Explore {first_module} utilities\"),\n",
+    "        (f\"{config.cli_command} factory {first_module} {first_factory}\", f\"Learn about {first_factory} factory\"),\n",
+    "        (f\"{config.cli_command} example {first_module} {example_feature}\", \"See usage examples\"),\n",
+    "        (f\"{config.cli_command} test-code '{example_test_code}'\", \"CRITICAL: Test your understanding\"),\n",
+    "        (f\"{config.cli_command} scan app.py\", \"Analyze existing code\"),\n",
+    "    ]\n",
+    "    \n",
+    "    # Calculate max width for alignment\n",
+    "    max_cmd_width = max(len(cmd) for cmd, _ in usage_flow_lines)\n",
+    "    \n",
+    "    # Format lines with aligned comments\n",
+    "    formatted_usage_flow = \"\\n\".join(\n",
+    "        f\"  {cmd:<{max_cmd_width}}  # {comment}\"\n",
+    "        for cmd, comment in usage_flow_lines\n",
+    "    )\n",
+    "    \n",
     "    # Create epilog with guidance\n",
     "    epilog = f\"\"\"\n",
     "Getting Started:\n",
@@ -861,8 +881,8 @@
     "  2. View factories:       {config.cli_command} factories\n",
     "  3. Search for patterns:  {config.cli_command} search <query>\n",
     "  4. CRITICAL: Test code:  {config.cli_command} test-code \"<code>\"\n",
-    "  5. Get imports:         {config.cli_command} imports\n",
-    "  6. Scan existing code:  {config.cli_command} scan <file>\n",
+    "  5. Get imports:          {config.cli_command} imports\n",
+    "  6. Scan existing code:   {config.cli_command} scan <file>\n",
     "\n",
     "Exploration Workflow:\n",
     "  - Start with 'modules' to see available utility categories\n",
@@ -894,12 +914,7 @@
     "  - All factories support method chaining and attribute access\n",
     "\n",
     "Example Usage Flow:\n",
-    "  {config.cli_command} modules                    # See what's available\n",
-    "  {config.cli_command} factories -m {first_module}       # Explore {first_module} utilities\n",
-    "  {config.cli_command} factory {first_module} {first_factory}          # Learn about {first_factory} factory\n",
-    "  {config.cli_command} example {first_module} {example_feature}      # See usage examples\n",
-    "  {config.cli_command} test-code '{example_test_code}'   # CRITICAL: Test your understanding\n",
-    "  {config.cli_command} scan app.py                # Analyze existing code\n",
+    "{formatted_usage_flow}\n",
     "\"\"\".strip()\n",
     "    \n",
     "    parser = argparse.ArgumentParser(\n",
