Update CLI tool.

--- a/nbs/cli/explorer.ipynb
+++ b/nbs/cli/explorer.ipynb
@@ -508,7 +508,7 @@
     "    example_modules = get_example_modules(limit=2)\n",
     "    \n",
     "    description = (\n",
-    "        'Generate recommended import statements for using the library.\\n\\n'\n",
+    "        f'Generate recommended {config.package_name} import statements for using the library.\\n\\n'\n",
     "        'This command generates:\\n'\n",
     "        '- FastHTML common imports (Div, P, Button, etc.)\\n'\n",
     "        f'- Core utility imports ({[util[0] for util in config.core_utilities]})\\n'\n",
