Update CLI tool.

--- a/nbs/cli/explorer.ipynb
+++ b/nbs/cli/explorer.ipynb
@@ -811,28 +811,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rltee0gt238",
+   "id": "f5716729-8755-4b42-b3bd-51c3f4ca5936",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "def setup_argument_parser(\n",
+    "def create_help_description(\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
-    "    \"\"\"Set up the main argument parser with all subcommands.\"\"\"\n",
+    "):\n",
+    "    \"\"\"Create a comprehensive description for the CLI tool's help message\"\"\"\n",
     "    if config is None:\n",
     "        config = get_active_config()\n",
     "    \n",
-    "    # Get dynamic examples\n",
-    "    example_modules = get_example_modules(limit=3, config=config)\n",
     "    example_factories = get_example_factories(limit=4, config=config)\n",
-    "    first_module = get_example_modules(limit=1, config=config)\n",
-    "    first_factory = get_example_factories(limit=1, config=config)\n",
-    "    example_feature = get_example_features(limit=1, config=config)\n",
-    "    example_test_code = get_example_test_code()\n",
     "    \n",
-    "    # Create comprehensive description\n",
-    "    description = f\"\"\"\n",
+    "    return f\"\"\"\n",
     "{config.package_name} CLI Explorer\n",
     "\n",
     "This tool helps you explore the {config.package_name} library, which provides:\n",
@@ -853,7 +846,31 @@
     "- Scanning existing code for replaceable CSS patterns\n",
     "\n",
     "All information is dynamically extracted from the library itself - nothing is hardcoded.\n",
-    "\"\"\".strip()\n",
+    "\"\"\".strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "427eb5d5-bd9f-4172-a6b8-0b84ae53f8f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def create_help_epilogue(\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
+    "):\n",
+    "    \"\"\"Create a comprehensive epilogue for the CLI tool's help message\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "\n",
+    "    # Get dynamic examples\n",
+    "    example_modules = get_example_modules(limit=3, config=config)\n",
+    "    example_factories = get_example_factories(limit=4, config=config)\n",
+    "    first_module = get_example_modules(limit=1, config=config)\n",
+    "    first_factory = get_example_factories(limit=1, config=config)\n",
+    "    example_feature = get_example_features(limit=1, config=config)\n",
+    "    example_test_code = get_example_test_code()\n",
     "    \n",
     "    # Build example usage flow with aligned comments\n",
     "    usage_flow_lines = [\n",
@@ -875,7 +892,7 @@
     "    )\n",
     "    \n",
     "    # Create epilog with guidance\n",
-    "    epilog = f\"\"\"\n",
+    "    return f\"\"\"\n",
     "Getting Started:\n",
     "  1. List all modules:     {config.cli_command} modules\n",
     "  2. View factories:       {config.cli_command} factories\n",
@@ -915,7 +932,34 @@
     "\n",
     "Example Usage Flow:\n",
     "{formatted_usage_flow}\n",
-    "\"\"\".strip()\n",
+    "\"\"\".strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "815a78d0-bad4-4134-b7d7-183e02818405",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "rltee0gt238",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def setup_argument_parser(\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
+    "): # TODO: Add type hint\n",
+    "    \"\"\"Set up the main argument parser with all subcommands.\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "\n",
+    "    description = create_help_description()\n",
+    "    epilog = create_help_epilogue()\n",
     "    \n",
     "    parser = argparse.ArgumentParser(\n",
     "        description=description,\n",
