Update CLI tool.

--- a/nbs/cli/explorer.ipynb
+++ b/nbs/cli/explorer.ipynb
@@ -852,15 +852,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "427eb5d5-bd9f-4172-a6b8-0b84ae53f8f5",
+   "id": "458aeec1-d15b-4117-9016-4c93b2fa8050",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "def create_help_epilogue(\n",
+    "def create_example_usage_flow(\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
     "):\n",
-    "    \"\"\"Create a comprehensive epilogue for the CLI tool's help message\"\"\"\n",
+    "    \"\"\"Create an example usage flow\"\"\"\n",
     "    if config is None:\n",
     "        config = get_active_config()\n",
     "\n",
@@ -886,10 +886,30 @@
     "    max_cmd_width = max(len(cmd) for cmd, _ in usage_flow_lines)\n",
     "    \n",
     "    # Format lines with aligned comments\n",
-    "    formatted_usage_flow = \"\\n\".join(\n",
+    "    return \"\\n\".join(\n",
     "        f\"  {cmd:<{max_cmd_width}}  # {comment}\"\n",
     "        for cmd, comment in usage_flow_lines\n",
-    "    )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "427eb5d5-bd9f-4172-a6b8-0b84ae53f8f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def create_help_epilogue(\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
+    "):\n",
+    "    \"\"\"Create a comprehensive epilogue for the CLI tool's help message\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "\n",
+    "    # Get dynamic examples\n",
+    "    example_factories = get_example_factories(limit=4, config=config)\n",
+    "    example_modules = get_example_modules(limit=3, config=config)\n",
     "    \n",
     "    # Create epilog with guidance\n",
     "    return f\"\"\"\n",
@@ -931,7 +951,7 @@
     "  - All factories support method chaining and attribute access\n",
     "\n",
     "Example Usage Flow:\n",
-    "{formatted_usage_flow}\n",
+    "{create_example_usage_flow()}\n",
     "\"\"\".strip()"
    ]
   },
